# ml-dd-metrics

./: Makefile  README.md  pyproject.toml  setup.cfg
drobe_dd_metrics/: __init__.py
drobe_dd_metrics/src/: mod.py
drobe_dd_metrics/src/core/: mod.py
drobe_dd_metrics/tests/: dd-metrics_test.py
