[tool.poetry]
name = "drobe-dd-metrics"
version = "0.0.4"
description = "The wraper for datadog api."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
datadog-api-client = "^2.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.5"
flake8 = "^3.9.1"
isort = "^5.8.0"
black = "^22.3.0"

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
