[metadata]
name = drobe-dd-metrics
version = 0.0.5
description = The wrapper of datadog api
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = yuta.nishimura
author_email = yuta.nishimura@drobe.jp
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    datadog-api-client >= 2.2.0